<resources>
    <string name="app_name">Fikenastet</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">"AIzaSyDa8Q6sOTVOL3JOa3iUNAhVypOVSgBXJm8" </string>

    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="click_me">Click Me</string>
    <string name="android_base_2025">Android Base 2025</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="we_ll_use_this_info_to_personalize_your_feed_maps_and_community_experience_you_can_update_it_anytime_in_your_profile">We’ll use this info to personalize your feed, maps,\nand community experience. You can update it\nanytime in your profile.</string>
    <string name="find_lakes_check_local_fishing_rules_and_nview_hotspots_or_public_catches_near_you">Find lakes, check local fishing rules, and\nview hotspots or public catches near you.</string>
    <string name="explore_the_map">Explore the Map</string>
    <string name="get_fishing_permits">Get Fishing Permits</string>
    <string name="got_it_take_me_to_the_app">Got it – Take me to the App</string>
    <string name="welcome">Welcome,</string>
    <string name="username">\@John_doe</string>
    <string name="todays_quate">Todays quate:</string>
    <string name="social_feed">Social Feed</string>
    <string name="confirm_and_pay">Confirm and Pay</string>
    <string name="all_fishing_permits">All Fishing Permits</string>
    <string name="share_permit">Share permit</string>
    <string name="overview">Overview</string>
    <string name="results">Results</string>
    <string name="your_profile">Your Profile</string>
    <string name="thread_detail">Thread Detail</string>
    <string name="thread_title">Thread Title</string>
    <string name="started_by">Started By</string>
    <string name="category">Category</string>
    <string name="original_post">Original Post</string>
    <string name="post_reply">Post Reply</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="add_a_reply">Add a Reply</string>
    <string name="please_describe">Please Describe</string>
    <string name="submit">Submit</string>
    <string name="post_thread">Post Thread</string>
    <string name="start_a_new_thread">Start a New Thread</string>
    <string name="post_content">Post Content</string>
    <string name="guidelines">Guidelines</string>
    <string name="be_respectful_and_stay_on_topic">• Be respectful and stay on topic</string>
    <string name="no_spam_offensive_content_or_self_promotion">• No spam, offensive content, or self-promotion</string>
    <string name="posts_are_pre_checked_by_ai_before_publishing">• Posts are pre-checked by AI before publishing</string>
    <string name="all_forum">All Forum</string>
    <string name="start_new_thread">Start New Thread</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="feed">Feed</string>
    <string name="forums">Forums</string>
    <string name="settings">Settings</string>
    <string name="lake_owner_panel">Lake Owner Panel</string>
    <string name="export_all_user_data">Export all user data</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="add_new_payment_method">Add New Payment Method</string>
    <string name="name_on_card">Name on card</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="payment_amp_orders"><![CDATA[Payment & Orders]]></string>
    <string name="transaction_history">Transaction History</string>
    <string name="load_more">Load more</string>
    <string name="edit_profile">Edit profile</string>
    <string name="fishing_since_i_could_walk_pike_zander_fan"><![CDATA[Fishing since I could walk. Pike & Zander fan.]]></string>
    <string name="my_lakes">My Lakes</string>
    <string name="add_new_lake">Add new lake</string>
    <string name="permits_sold">Permits Sold</string>
    <string name="sales">Sales</string>
    <string name="add_feed">Add Feed</string>
    <string name="fish_caught">Fish Caught</string>
    <string name="messages">Messages</string>
    <string name="select_species">Select Species</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="bait_used">Bait used</string>
    <string name="submit_for_admin_approval">Submit for Admin Approval</string>
    <string name="blocked_user">Blocked User</string>
    <string name="unblock">Unblock</string>
    <string name="account_integrity">Account Integrity</string>
    <string name="privacy">Privacy</string>
</resources>