<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.fisken_astet.fikenastet.ui.settings.SettingsVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.settings.payment.AddCardFragment">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Back Button -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:onClick="@{v -> vm.onClick(v)}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <!-- Notification -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNotification"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/notification"
            android:onClick="@{v->vm.onClick(v)}"
            app:layout_constraintBottom_toBottomOf="@+id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivBack" />

        <!-- Title -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/TextView_500_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_payment_method"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@id/ivNotification"
            app:layout_constraintEnd_toStartOf="@id/ivNotification"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="@id/ivNotification" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_500_Medium"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/name_on_card"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/app_text_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            style="@style/TextView_400_Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_5sdp"
            android:minHeight="@dimen/_43sdp"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/radius_stroke"
            android:hint="Enter here"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/etYear"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColorHint="@color/app_text_hint"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_500_Medium"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/expiry_date"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/app_text_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvCvv"
            app:layout_constraintTop_toBottomOf="@id/etName" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etYear"
            style="@style/TextView_400_Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_5sdp"
            android:minHeight="@dimen/_43sdp"
            android:singleLine="true"
            android:inputType="number"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/radius_stroke"
            android:layout_marginEnd="@dimen/_6sdp"
            android:hint="DD/MM/YYYY"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/etCvv"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColorHint="@color/app_text_hint"
            app:layout_constraintTop_toBottomOf="@+id/tvYear"
            app:layout_constraintStart_toStartOf="@id/tvYear"
            app:layout_constraintEnd_toStartOf="@id/etCvv"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_500_Medium"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/cvv"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/app_text_hint"
            app:layout_constraintStart_toEndOf="@id/tvYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCvv"
            style="@style/TextView_400_Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_5sdp"
            android:minHeight="@dimen/_43sdp"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/radius_stroke"
            android:hint="Enter cvv"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/etNumber"
            android:layout_marginStart="@dimen/_6sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColorHint="@color/app_text_hint"
            app:layout_constraintTop_toBottomOf="@+id/tvYear"
            app:layout_constraintStart_toEndOf="@id/etYear"
            app:layout_constraintEnd_toEndOf="@id/tvCvv"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_500_Medium"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/card_number"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/app_text_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etYear" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNumber"
            style="@style/TextView_400_Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_5sdp"
            android:minHeight="@dimen/_43sdp"
            android:singleLine="true"
            android:maxLength="16"
            android:inputType="number"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/radius_stroke"
            android:hint="Enter here"
            android:imeOptions="actionDone"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColorHint="@color/app_text_hint"
            app:layout_constraintTop_toBottomOf="@+id/tvNumber" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/radius_border"
            android:onClick="@{v ->vm.onClick(v)}"
            android:paddingHorizontal="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textGetStarted"
                style="@style/InterTextView_500_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconFish"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:src="@drawable/famicons_fish"
                app:layout_constraintBottom_toBottomOf="@id/textGetStarted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textGetStarted" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>