<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.fikenastet.ui.settings.lake_owner_panel.MyLakesVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.settings.lake_owner_panel.MyLakesFragment">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Back Button -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:onClick="@{v -> vm.onClick(v)}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <!-- Notification -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNotification"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/notification"
            app:layout_constraintBottom_toBottomOf="@+id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivBack" />

        <!-- Title -->
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView_500_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lake_owner_panel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@id/ivNotification"
            app:layout_constraintEnd_toStartOf="@id/ivNotification"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="@id/ivNotification" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLakes"
            style="@style/TextView_600_SemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_37sdp"
            android:text="@string/my_lakes"
            app:layout_constraintTop_toBottomOf="@id/ivBack"
            app:layout_constraintStart_toStartOf="@id/ivBack"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLakes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvLakes"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_my_lakes"
            app:layout_constraintBottom_toTopOf="@id/consButton"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/radius_border"
            android:onClick="@{v ->vm.onClick(v)}"
            android:paddingHorizontal="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textGetStarted"
                style="@style/InterTextView_500_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_lake"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconFish"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:src="@drawable/famicons_fish"
                app:layout_constraintBottom_toBottomOf="@id/textGetStarted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textGetStarted" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>